--- a/app/assets/stylesheets/features/funds.css.scss
+++ b/app/assets/stylesheets/features/funds.css.scss
@@ -91,6 +91,9 @@
     &.label-btc {
       background-color: #DDCD1B;
     }
+    &.label-frc {
+      background-color: #DECD1B;
+    }
   }
   .currency-logo {
     text-align: center;
