--- a/app/views/private/assets/_liability_tabs.html.slim
+++ b/app/views/private/assets/_liability_tabs.html.slim
@@ -2,6 +2,7 @@
   ul.nav.nav-tabs
     li.active: a.btc-proof href="#btc-proof" data-toggle="tab" == t('.verify-btc')
     li:        a.cny-proof href="#cny-proof" data-toggle="tab" == t('.verify-cny')
+    li:        a.frc-proof href="#frc-proof" data-toggle="tab" == t('.verify-frc')
 
   .tab-content
     #btc-proof.tab-pane.active: .trade-wrapper
@@ -19,3 +20,12 @@
           == t("currency.icon.cny")
           = @cny_proof.sum
       = render 'liability_data', account: @cny_account, proof: @cny_proof
+
+    #frc-proof.tab-pane:        .trade-wrapper
+      .assets
+        span.title = t('.frc-assets-total')
+        span.currency
+          == t("currency.icon.frc")
+          = @cny_proof.sum
+      = render 'liability_data', account: @frc_account, proof: @frc_proof
+
