--- a/app/views/private/assets/index.html.slim
+++ b/app/views/private/assets/index.html.slim
@@ -7,10 +7,14 @@
         a = t('.btc-assets')
       li        data-scroll-nav='2'
         a = t('.cny-assets')
+      li        data-scroll-nav='3'
+        a = t('.frc-assets')
+
 
     - if current_user
       div data-scroll-index=0 = render 'liability_proof'
 
     div data-scroll-index=1 = render 'btc_assets'
     div data-scroll-index=2 = render 'cny_assets'
+    div data-scroll-index=3 = render 'frc_assets'
 
