--- a/public/templates/funds/deposit.html
+++ b/public/templates/funds/deposit.html
@@ -1,3 +1,5 @@
 <ng-include src="'/templates/funds/_flash.html'"></ng-include>
 <ng-include ng-if="currency == 'cny'" src="'/templates/funds/deposit_cny.html'"></ng-include>
 <ng-include ng-if="currency == 'btc'" src="'/templates/funds/deposit_btc.html'"></ng-include>
+<ng-include ng-if="currency == 'frc'" src="'/templates/funds/deposit_frc.html'"></ng-include>
+
