--- a/app/views/private/assets/_liability_tabs.html.slim
+++ b/app/views/private/assets/_liability_tabs.html.slim
@@ -1,7 +1,7 @@
 .tabbable
   ul.nav.nav-tabs
     li.active: a.btc-proof href="#btc-proof" data-toggle="tab" == t('.verify-btc')
-    li:        a.cny-proof href="#cny-proof" data-toggle="tab" == t('.verify-cny')
+    /!li:        a.cny-proof href="#cny-proof" data-toggle="tab" == t('.verify-cny')
     li:        a.frc-proof href="#frc-proof" data-toggle="tab" == t('.verify-frc')
 
   .tab-content
@@ -13,7 +13,7 @@
           = @btc_proof.sum
       = render 'liability_data', account: @btc_account, proof: @btc_proof
 
-    #cny-proof.tab-pane:        .trade-wrapper
+    /!#cny-proof.tab-pane:        .trade-wrapper
       .assets
         span.title = t('.cny-assets-total')
         span.currency
