--- a/app/views/private/assets/_liability_tabs.html.slim
+++ b/app/views/private/assets/_liability_tabs.html.slim
@@ -14,12 +14,12 @@
       = render 'liability_data', account: @btc_account, proof: @btc_proof
 
     /!#cny-proof.tab-pane:        .trade-wrapper
-      .assets
-        span.title = t('.cny-assets-total')
-        span.currency
-          == t("currency.icon.cny")
-          = @cny_proof.sum
-      = render 'liability_data', account: @cny_account, proof: @cny_proof
+      /!.assets
+        /!span.title = t('.cny-assets-total')
+        /!span.currency
+          /!== t("currency.icon.cny")
+          /!= @cny_proof.sum
+      /!= render 'liability_data', account: @cny_account, proof: @cny_proof
 
     #frc-proof.tab-pane:        .trade-wrapper
       .assets
