#2 - commenting out CNY

--- a/app/views/private/assets/index.html.slim
+++ b/app/views/private/assets/index.html.slim
@@ -5,7 +5,7 @@
         a = t('.liability-proof')
       li        data-scroll-nav='1'
         a = t('.btc-assets')
-      li        data-scroll-nav='2'
+      /!li        data-scroll-nav='2'
         a = t('.cny-assets')
       li        data-scroll-nav='3'
         a = t('.frc-assets')
@@ -15,6 +15,6 @@
       div data-scroll-index=0 = render 'liability_proof'
 
     div data-scroll-index=1 = render 'btc_assets'
-    div data-scroll-index=2 = render 'cny_assets'
+    /!div data-scroll-index=2 = render 'cny_assets'
     div data-scroll-index=3 = render 'frc_assets'
 
