--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,23 +1,19 @@
 header.text-center
-  .ribbon
-    a href="https://github.com/peatio/peatio" View on GitHub
   .container
-    a href='http://github.com/peatio/peatio'
-      img src='#{image_path 'logo.png'}' width='336px'
     section
       - Rails.configuration.i18n.available_locales.each do |locale|
         h3 = t(:slogan, locale: locale)
     #getstart.row
-      - unless current_user
-        .col-xs-4.col-xs-offset-8
-          a href="#{signin_path}" class="btn btn-primary btn-lg btn-block" role="button" = t("header.signin")
-        - if ENV['WEIBO_AUTH'] == "true"
-          .col-xs-4
-            a href="/auth/weibo" class="btn btn-primary btn-lg btn-block" role="button" = t("header.login_via_weibo")
-        .col-xs-4
-          a href="#{signup_path}" class="btn btn-primary btn-lg btn-block" role="button" = t("header.signup")
-      - else
-        .col-xs-6.col-xs-offset-9.text-center
-          a href="#{market_path(current_market)}" class="btn btn-primary btn-lg btn-block" role="button" = t("header.getstart")
-          a href="#{funds_path}" class="btn btn-primary btn-lg btn-block" role="button" = t("header.funds")
-          a href="#{settings_path}" class="btn btn-primary btn-lg btn-block" role="button" = t("header.settings")
+      = simple_form_for @identity, :url => '/auth/identity/callback', :method => :post do |f|
+        = f.input :email, :input_html => {:name => 'auth_key', :autofocus => 'true'}, label: t('simple_form.labels.session.email'), placeholder: t('simple_form.placeholders.session.email')
+        = f.input :password, :as => 'password', :input_html => {:name => 'password'}, label: t('simple_form.labels.session.password'), placeholder: t('simple_form.placeholders.session.password')
+        - if require_captcha?
+          = f.input :captcha, required: true, label: t('simple_form.labels.session.captcha') do
+            = show_simple_captcha
+        hr.split
+        = f.button :wrapped, t('header.signin'), cancel: root_path
+
+        = content_for :guide do
+          ul.list-unstyled
+            li: a href='#{new_reset_password_path}' = t('.reset_password')
+            li: a href='#{signup_path}' = t('header.signup')
