#3 - init for market state output on landing page

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -17,3 +17,5 @@ header.text-center
           ul.list-unstyled
             li: a href='#{new_reset_password_path}' = t('.reset_password')
             li: a href='#{signup_path}' = t('header.signup')
+    section
+      = current_gon.inspect
