--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -18,4 +18,14 @@ header.text-center
             li: a href='#{new_reset_password_path}' = t('.reset_password')
             li: a href='#{signup_path}' = t('header.signup')
     section
-      = current_gon.gon.to_json
+      - current_gon.gon.tickers.each do |ticker|
+        div.row
+          div.col-xs-6.col-md-3
+            div.thumbnail
+              div.caption
+                = ticker.name
+              div Last Price
+              div
+                = ticker.last
+              div Volume
+                = ticker.volume
