--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -28,4 +28,5 @@ header.text-center
               div
                 = ticker['last']
               div Volume
+              div
                 = ticker['volume']
