--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -23,7 +23,7 @@ header.text-center
           div.col-xs-6.col-md-3
             div.thumbnail
               div.caption
-                = ticker['name']
+                = ticker.name
               div Last Price
               div
                 = ticker['last']
