--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -23,10 +23,10 @@ header.text-center
           div.col-xs-6.col-md-3
             div.thumbnail
               div.caption
-                = ticker[:name]
+                = ticker[0]
               div Last Price
               div
-                = ticker[:last]
+                = ticker[5]
               div Volume
               div
-                = ticker[:volume]
+                = ticker[6]
