--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -24,6 +24,7 @@ header.text-center
             div.thumbnail
               div.caption
                 = ticker[0]
+                = ticker.to_json
               div Last Price
               div
                 = ticker[5]
