--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,22 +1,22 @@
 header.text-center
   .container
     section
-      - Rails.configuration.i18n.available_locales.each do |locale|
-        h3 = t(:slogan, locale: locale)
-    #getstart.row
-      = simple_form_for @identity, :url => '/auth/identity/callback', :method => :post do |f|
-        = f.input :email, :input_html => {:name => 'auth_key', :autofocus => 'true'}, label: t('simple_form.labels.session.email'), placeholder: t('simple_form.placeholders.session.email')
-        = f.input :password, :as => 'password', :input_html => {:name => 'password'}, label: t('simple_form.labels.session.password'), placeholder: t('simple_form.placeholders.session.password')
-        - if require_captcha?
-          = f.input :captcha, required: true, label: t('simple_form.labels.session.captcha') do
-            = show_simple_captcha
-        hr.split
-        = f.button :wrapped, t('header.signin'), cancel: root_path
+      div.row
+        div.col-md-7
+        div.col-md-5
+          = simple_form_for @identity, :url => '/auth/identity/callback', :method => :post do |f|
+            = f.input :email, :input_html => {:name => 'auth_key', :autofocus => 'true'}, label: t('simple_form.labels.session.email'), placeholder: t('simple_form.placeholders.session.email')
+            = f.input :password, :as => 'password', :input_html => {:name => 'password'}, label: t('simple_form.labels.session.password'), placeholder: t('simple_form.placeholders.session.password')
+            - if require_captcha?
+              = f.input :captcha, required: true, label: t('simple_form.labels.session.captcha') do
+                = show_simple_captcha
+            hr.split
+            = f.button :wrapped, t('header.signin'), cancel: root_path
 
-        = content_for :guide do
-          ul.list-unstyled
-            li: a href='#{new_reset_password_path}' = t('.reset_password')
-            li: a href='#{signup_path}' = t('header.signup')
+            = content_for :guide do
+              ul.list-unstyled
+                li: a href='#{new_reset_password_path}' = t('.reset_password')
+                li: a href='#{signup_path}' = t('header.signup')
     section
       - current_gon.gon['tickers'].each do |ticker|
         div.row
