--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,10 +1,10 @@
 header.text-center
   .container
-    section
-      div.row
-        div.col-md-12
-        div.col-md-12
-          div.panel
+    div.row
+      div.col-md-12
+      div.col-md-12
+        div.panel
+          div.panel-body
             = simple_form_for @identity, :url => '/auth/identity/callback', :method => :post do |f|
               = f.input :email, :input_html => {:name => 'auth_key', :autofocus => 'true'}, label: t('simple_form.labels.session.email'), placeholder: t('simple_form.placeholders.session.email')
               = f.input :password, :as => 'password', :input_html => {:name => 'password'}, label: t('simple_form.labels.session.password'), placeholder: t('simple_form.placeholders.session.password')
@@ -12,7 +12,7 @@ header.text-center
                 = f.input :captcha, required: true, label: t('simple_form.labels.session.captcha') do
                   = show_simple_captcha
               hr.split
-              = f.button :wrapped, t('header.signin'), cancel: root_path
+              = f.button :wrapped, cancel: root_path
 
               ul.list-unstyled
                 li: a href='#{new_reset_password_path}' = t('.reset_password')
