#3 - re-laying the page

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -11,8 +11,7 @@ header.text-center
               - if require_captcha?
                 = f.input :captcha, required: true, label: t('simple_form.labels.session.captcha') do
                   = show_simple_captcha
-              hr.split
-              = f.button :wrapped, cancel: root_path
+              = f.button :wrapped, t('header.signin')
 
               ul.list-unstyled
                 li: a href='#{new_reset_password_path}' = t('.reset_password')
