--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -7,7 +7,7 @@ header.text-center
           div.panel-body
             = simple_form_for @identity, :url => '/auth/identity/callback', :method => :post do |f|
               = f.input :email, :input_html => {:name => 'auth_key', :autofocus => 'true'}, label: t('simple_form.labels.session.email'), placeholder: t('simple_form.placeholders.session.email')
-              = f.input :password, hint: nil, :as => 'password', :input_html => {:name => 'password'}, label: t('simple_form.labels.session.password'), placeholder: t('simple_form.placeholders.session.password')
+              = f.input :password, hint: false, :as => 'password', :input_html => {:name => 'password'}, label: t('simple_form.labels.session.password'), placeholder: t('simple_form.placeholders.session.password')
               - if require_captcha?
                 = f.input :captcha, required: true, label: t('simple_form.labels.session.captcha') do
                   = show_simple_captcha
