--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -153,4 +153,12 @@ form.simple_form {
   width: 100%;
 }
 
+.homelogin .col-xs-14 {
+  width: 66.6%;
+}
+
+.homelogin .col-xs-24 {
+  width: 100%;
+}
+
 @import 'layouts/custom';
