--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -19,7 +19,7 @@ header.text-center
     - current_gon.gon['tickers'].each do |ticker|
       div.row
         div.col-xs-12.col-md-12
-          div.thumbnail
+          div.thumbnail.white
             div.caption
               = ticker[1][:name]
             div Last Price
