--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -16,9 +16,10 @@ header.text-center
                 a href='#{new_reset_password_path}' = t('.reset_password')
                 span= ' • '
                 a href='#{signup_path}' = t('header.signup')
+    h2.text-center Price Overview
     - current_gon.gon['tickers'].each do |ticker|
       div.row
-        div.col-xs-12.col-md-12
+        div.col-xs-12.col-md-6
           div.thumbnail.white
             div.caption
               = ticker[1][:name]
