--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -166,7 +166,7 @@ form.simple_form {
 }
 
 body.background {
-  background-image: url('/images/bg.png');
+  background-image: url('../images/bg.png');
   background-size: cover;
   background-repeat: no-repeat;
 }
