--- a/app/views/layouts/landing.html.slim
+++ b/app/views/layouts/landing.html.slim
@@ -13,5 +13,19 @@ html lang="en"
     #wrap
       = render 'shared/alert'
       = yield
+      - if content_for?(:header)
+        = yield(:header)
+      - else
+        = render 'shared/header'
+
+        - if content_for?(:frame)
+          = yield(:frame)
+        - else
+          = render 'shared/frame'
+
       #push
-    = render 'shared/footer'
+
+    - if content_for?(:footer)
+      = yield(:footer)
+    - else
+      = render 'shared/footer'
