--- a/app/views/layouts/landing.html.slim
+++ b/app/views/layouts/landing.html.slim
@@ -9,7 +9,7 @@ html lang="en"
     = render 'shared/html5'
     = render 'shared/meta'
     = csrf_meta_tags
-  body id='#{body_id}' data-lang="#{locale_name}" class="background"
+  body id='settings-index' data-lang="#{locale_name}" class="background"
     = render 'shared/alert'
 
     #wrap
