Work in progress: refactor currencies

--- a/app/views/private/assets/index.html.slim
+++ b/app/views/private/assets/index.html.slim
@@ -9,7 +9,7 @@
       div data-scroll-index=0 = render 'liability_proof'
     -@currencies.each_with_index do |currency, idx|
       -if currency[:coin]
-        div data-scroll-index=idx = render 'coin_assets', code: currency[:code], proof: @proofs[currency[:code]]
+        div data-scroll-index=idx = render 'coin_assets', code: currency[:code], proof: @proofs[currency[:code].to_sym]
       -else
         div data-scroll-index=idx = render 'fiat_assets', code: currency[:code]
 
