--- a/app/views/private/assets/index.html.slim
+++ b/app/views/private/assets/index.html.slim
@@ -1,22 +1,15 @@
 = content_for :frame do
   .container
     ul.nav.nav-justified.assets-nav
-      - if current_user
-        li.active data-scroll-nav=0
-          a = t('.liability-proof')
-      -@currencies.each_with_index do |currency, idx|
+      - if (current_user)
+        li.active data-scroll-nav="0"
+          a= t('.liability-proof')
+      - @currencies.each_with_index do |currency, idx|
         li data-scroll-nav=idx class=(not current_user && idx == 1 ? 'active' : 'inactive')
-          a = t(".#{currency[:code]}-assets")
+          a= t(".#{currency[:code]}-assets")
 
     - if current_user
       div data-scroll-index=0 = render 'liability_proof'
-    -@currencies.each_with_index do |currency, idx|
-      -if currency[:coin]
-        div data-scroll-index=idx = render 'coin_assets', code: currency[:code], proof: @proofs[currency[:code]]
-      -else
-        div data-scroll-index=idx = render 'fiat_assets', code: currency[:code]
-
-  /!- if current_user
-      /!div data-scroll-index=0 = render 'liability_proof'
-  /!div data-scroll-index=1 = render 'btc_assets'
-    /!div data-scroll-index=3 = render 'frc_assets'
+    - @currencies.each_with_index do |currency, idx|
+      div data-scroll-index=idx
+        = render (currency[:coin] ? 'coin_assets' : 'fiat_assets' ), code: currency[:code], proof: @proofs[currency[:code]]
