Work in progress: refactor currencies

--- a/app/views/private/assets/_liability_proof.html.slim
+++ b/app/views/private/assets/_liability_proof.html.slim
@@ -7,4 +7,4 @@
         p
           = link_to t('.how-to-verify'), t('.how-to-verify-uri'), :target => '_blank'
       #content.col-xs-16
-        = render 'liability_tabs', currencies: @currencies, proofs: @proofs
+        = render 'liability_tabs', currencies: currencies, proofs: proofs
