--- a/app/views/private/assets/index.html.slim
+++ b/app/views/private/assets/index.html.slim
@@ -9,7 +9,8 @@
           a= t(".#{currency[:code]}-assets")
 
     - if current_user
-      div data-scroll-index=0 = render 'liability_proof', currencies: @currencies, proofs: @proofs
+      div data-scroll-index=0
+        = render 'liability_proof', currencies: @currencies, proofs: @proofs
     - @currencies.each_with_index do |currency, idx|
       div data-scroll-index=idx
         = render (currency[:coin] ? 'coin_assets' : 'fiat_assets' ), code: currency[:code], proof: @proofs[currency[:code]]
