--- a/app/views/private/assets/_liability_tabs.html.slim
+++ b/app/views/private/assets/_liability_tabs.html.slim
@@ -1,6 +1,6 @@
 .tabbable
   ul.nav.nav-tabs
-    - currencies.each_with_index |currency, index|
+    - currencies.each_with_index do |currency, index|
       li class=(index == 0 ? 'active' : 'inactive')
         a class=("#{currency[:code]}-proof") href='"##{currency[:code]}-proof"' data-toggle="tab" == t(".verify-#{currency[:code]}")
 
