--- a/app/views/private/assets/_liability_tabs.html.slim
+++ b/app/views/private/assets/_liability_tabs.html.slim
@@ -13,7 +13,7 @@
               span.title = t(".#{currency[:code]}-assets-total")
               span.currency
                 == t("currency.icon.#{currency[:code]}")
-                = @proofs[currency[:code]].inspect
+                = @proofs[currency[:code]].sum
             = render 'liability_data', account: @accounts[currency[:code]], proof: @proofs[currency[:code]]
   /!div
     #btc-proof.tab-pane.active: .trade-wrapper
