Work in progress: refactor currencies

--- a/public/templates/funds/withdraw.html
+++ b/public/templates/funds/withdraw.html
@@ -2,4 +2,4 @@
 <ng-include ng-if="currency == 'cny'" src="'/templates/funds/withdraw_cny.html'"></ng-include>
 <ng-include ng-if="currency == 'btc'" src="'/templates/funds/withdraw_btc.html'"></ng-include>
 <ng-include ng-if="currency == 'frc'" src="'/templates/funds/withdraw_frc.html'"></ng-include>
-{{ currencies[0] }}
+{{ currencies[0].key }}
