--- a/public/templates/funds/withdraw.html
+++ b/public/templates/funds/withdraw.html
@@ -1,4 +1,4 @@
-{{ currency }}
+{{ fiat_currency }}
 <ng-include src="'/templates/funds/_flash.html'"></ng-include>
 <ng-include ng-if="currency == 'cny'" src="'/templates/funds/withdraw_cny.html'"></ng-include>
 <ng-include ng-if="currency == 'btc'" src="'/templates/funds/withdraw_btc.html'"></ng-include>
