--- a/public/templates/funds/withdraw.html
+++ b/public/templates/funds/withdraw.html
@@ -1,5 +1,7 @@
-{{ fiat_currency }}
 <ng-include src="'/templates/funds/_flash.html'"></ng-include>
+<ng-include src="fiat_currency ? '/templates/funds/_fiat_withdraw.html' : '/templates/funds/_coin_withdraw.html'"></ng-include>
+<!-- -->
 <ng-include ng-if="currency == 'cny'" src="'/templates/funds/withdraw_cny.html'"></ng-include>
 <ng-include ng-if="currency == 'btc'" src="'/templates/funds/withdraw_btc.html'"></ng-include>
 <ng-include ng-if="currency == 'frc'" src="'/templates/funds/withdraw_frc.html'"></ng-include>
+
