--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -42,7 +42,8 @@ html lang="en"
               ul.dropdown-menu
                 - WithdrawChannel.all.each do |c|
                   - if can? :manage, c.kls
-                    li = link_to c.title_text, [:admin, c.kls]
+                    /!li = link_to c.title_text, [:admin, c.kls]
+                    li = link_to c.title_text, [:admin, :withdraws, :coin]
 
           - if can? :manage, Member
             li class = check_active('members')
