--- a/app/views/admin/deposits/coins/index.html.slim
+++ b/app/views/admin/deposits/coins/index.html.slim
@@ -1,3 +1,4 @@
+= @coins.inspect
 = table_for(@coins, class: 'table table-condensed table-hover') do |t|
   - t.column :txid do |x|
     a href='#{x.blockchain_url}' target='_blank'
