--- a/app/views/admin/withdraws/coins/show.html.slim
+++ b/app/views/admin/withdraws/coins/show.html.slim
@@ -5,26 +5,26 @@
         span = t('.withdraw', sn: @coin.id)
       .panel-body
         = description_for :withdraw do
-          = item_for @satoshi, :id
-          = item_for @satoshi, :created_at
-          = item_for @satoshi, :aasm_state_text
+          = item_for @coin, :id
+          = item_for @coin, :created_at
+          = item_for @coin, :aasm_state_text
           hr.split
-          = item_for @satoshi.member, :name
-          = item_for @satoshi, :fund_extra
-          = item_for @satoshi, :fund_uid do
-            span = @satoshi.fund_uid.truncate(22)
-          = item_for @satoshi, :amount
+          = item_for @coin.member, :name
+          = item_for @coin, :fund_extra
+          = item_for @coin, :fund_uid do
+            span = @coin.fund_uid.truncate(22)
+          = item_for @coin, :amount
           hr.split
-          = item_for @satoshi, :remark
+          = item_for @coin, :remark
           hr.split
           ul.list-inline.pull-right
-            - if @satoshi.may_reject?
+            - if @coin.may_reject?
               li
-                = link_to t('.reject'), url_for([:admin, @satoshi]), class: 'btn btn-danger', method: 'DELETE', confirm: t('.reject_confirm')
+                = link_to t('.reject'), url_for([:admin, @coin]), class: 'btn btn-danger', method: 'DELETE', confirm: t('.reject_confirm')
             - if @satoshi.may_process?
               li
-                = link_to t('.process'), url_for([:admin, @satoshi]), class: 'btn btn-primary', method: 'PATCH'
+                = link_to t('.process'), url_for([:admin, @coin]), class: 'btn btn-primary', method: 'PATCH'
 
   .col-xs-12
-    = render partial: 'shared/admin/member', locals: {member: @satoshi.member}
-    = render partial: 'shared/admin/account', locals: {account: @satoshi.account}
+    = render partial: 'shared/admin/member', locals: {member: @coin.member}
+    = render partial: 'shared/admin/account', locals: {account: @coin.account}
