--- a/app/views/admin/withdraws/coins/show.html.slim
+++ b/app/views/admin/withdraws/coins/show.html.slim
@@ -20,10 +20,10 @@
           ul.list-inline.pull-right
             - if @coin.may_reject?
               li
-                = link_to t('.reject'), url_for([:admin, @coin]), class: 'btn btn-danger', method: 'DELETE', confirm: t('.reject_confirm')
+                = link_to t('admin.withdraws.reject_coin'), url_for([:admin, @coin]), class: 'btn btn-danger', method: 'DELETE', confirm: t('admin.withdraws.reject_confirm_coin')
             - if @coin.may_process?
               li
-                = link_to t('.process'), url_for([:admin, @coin]), class: 'btn btn-primary', method: 'PATCH'
+                = link_to t('admin.withdraws.process_coin'), url_for([:admin, @coin]), class: 'btn btn-primary', method: 'PATCH'
 
   .col-xs-12
     = render partial: 'shared/admin/member', locals: {member: @coin.member}
