--- a/app/views/admin/withdraws/coins/show.html.slim
+++ b/app/views/admin/withdraws/coins/show.html.slim
@@ -18,7 +18,7 @@
           = item_for @coin, :remark
           hr.split
           ul.list-inline.pull-right
-            - if @coin.may_reject?
+            /!- if @coin.may_reject?
               li
                 = link_to t('admin.withdraws.reject_coin'), url_for([:admin, @coin]), class: 'btn btn-danger', method: 'DELETE', confirm: t('admin.withdraws.reject_confirm_coin')
             - if @coin.may_process?
