--- a/app/views/admin/withdraws/coins/_table.html.slim
+++ b/app/views/admin/withdraws/coins/_table.html.slim
@@ -10,4 +10,4 @@
     code.text-info = x.amount
   - t.column :state_and_action, class: 'col-xs-3' do |x|
     span = "#{x.aasm_state_text} / "
-    = link_to t("actions.view"), url_for([:admin, x]), target: '_blank'
+    = link_to t("actions.view"), admin_withdraws_coin_path, target: '_blank'
