--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -21,7 +21,7 @@
                 td.text-right = c[:sum].round(8)
 
                 - if c[:coinable]
-                  td.text-right = c[:hot].round(8)
+                  td.text-right = c[:hot].is_a? String ? c[:hot] : c[:hot].round(8)
                   - if c[:hot] == 'N/A'
                     td.text-right = c[:hot].round(8)
                   - else
