--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -23,7 +23,7 @@
                 - if c[:coinable]
                   td.text-right = c[:hot].is_a? String ? c[:hot] : c[:hot].round(8)
                   - if c[:hot] == 'N/A'
-                    td.text-right = c[:hot].round(8)
+                    td.text-right = c[:hot]
                   - else
                     td.text-right = (c[:sum].to_f - c[:hot].to_f).round(8)
                 - else
