--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -16,12 +16,12 @@
             - @currencies_summary.each do |c|
               tr
                 td: b = c[:name]
-                td.text-right = c[:locked].round(8)
-                td.text-right = c[:balance].round(8)
-                td.text-right = c[:sum].round(8)
+                td.text-right = c[:locked].to_f.round(8)
+                td.text-right = c[:balance].to_f.round(8)
+                td.text-right = c[:sum].to_f.round(8)
 
                 - if c[:coinable]
-                  td.text-right = c[:hot].is_a?(String) ? c[:hot] : c[:hot].round(8)
+                  td.text-right = c[:hot].is_a?(String) ? c[:hot] : c[:hot].to_f.round(8)
                   - if c[:hot] == 'N/A'
                     td.text-right = c[:hot]
                   - else
