--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -165,4 +165,10 @@ form.simple_form {
   background-color: white;
 }
 
+.tickerbox {
+  display: inline-block;
+  margin: 1%;
+  width: 20%;
+}
+
 @import 'layouts/custom';
