--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -17,13 +17,12 @@ header.text-center
                 span= ' • '
                 a href='#{signup_path}' = t('header.signup')
     div.row
-      div.col-md-12
-      div.col-md-12
+      div.col-md-24
         h2.text-center Price Overview
         div.row
-          div.col-xs-12.col-md-8
+          div.col-xs-24
             - current_gon.gon['tickers'].each do |ticker|
-              div.thumbnail.white
+              div.thumbnail.white.tickerbox
                 div.caption
                   = ticker[1][:name]
                 div Last Price
