--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -25,11 +25,9 @@ header.text-center
               div.thumbnail.white.tickerbox
                 div.caption
                   = ticker[1][:name]
-                div Last Price
-                div
+                div = 'Last Price'
                   strong
                     = ticker[1][:last]
-                div Volume
-                div
+                div = 'Volume'
                   strong
                     = ticker[1][:volume]
