--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -24,6 +24,6 @@ header.text-center
             - current_gon.gon['tickers'].each do |ticker|
               div.thumbnail.white.tickerbox
                 div.caption
-                  = ticker[1][:name]
+                  strong = ticker[1][:name]
                 div = "Last price: #{ticker[1][:last]}"
                 div = "Volume: #{ticker[1][:volume]}"
