--- a/app/views/admin/id_documents/index.html.slim
+++ b/app/views/admin/id_documents/index.html.slim
@@ -6,7 +6,7 @@
     - t.column :name, class: 'col-xs-2' do |x|
       = link_to x.name.to_s, admin_member_path(x.member)
     - t.column :email, class: 'col-xs-2' do |x|
-      = link_to x.member.email, admin_member_path(x.member)
+      = link_to x.member.email, admin_member_path id: x.member.id
     - t.column :id_document_type, t('.id_document_type'), class: 'col-xs-3' do |x|
       = x.id_document_type.blank? ? t('.unknow') : t("enumerize.id_document_type.#{x.id_document_type}")
     - t.column :id_bill_type, t('.id_bill_type'), class: 'col-xs-3' do |x|
